--- a/Basic Ultimate Stats/css/style.css
+++ b/Basic Ultimate Stats/css/style.css
@@ -50,7 +50,7 @@ th {
 }
 
 .hold {
-  background-color: #5cb85c;
+  background-color: #66af56;
 }
 
 .break {
@@ -58,7 +58,7 @@ th {
 }
 
 .conceded {
-  background-color: #d9534f;
+  background-color: #af5856;
 }
 
 .broken {
