Removed buttons in print mode

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,15 @@ body {
     }
 }
 
+@media print {
+    #turnover,
+    #score,
+    #halftime,
+    #undo {
+        display: none !important;
+    }
+}
+
 .navbar {
   border-radius: 0px;
 }
