Data table improvements

--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,28 @@
-html,
-body {
-    background-color: black;
-    color: white;
+html, body {
+  background-color: black;
+  color: white;
 }
 
 @media screen and (max-width: 359px) {
-    .defense {
-        float: right !important;
-        width: 40% !important;
-        text-align: right !important;
-    }
-
-    .offense {
-        float: left !important;
-        width: 40% !important;
-        text-align: left !important;
-    }
-
-    #title>th {
-      font-size: 12px;
-    }
+  .defense {
+    float: right !important;
+    width: 40% !important;
+    text-align: right !important;
+  }
+  .offense {
+    float: left !important;
+    width: 40% !important;
+    text-align: left !important;
+  }
+  #title>th {
+    font-size: 12px;
+  }
 }
 
 @media print {
-    button {
-        display: none !important;
-    }
+  button {
+    display: none !important;
+  }
 }
 
 .navbar {
@@ -33,28 +30,26 @@ body {
 }
 
 .noborder {
-    border-color: black !important;
+  border-color: black !important;
 }
 
 #scoreboard {
-    min-width: 70px;
-    margin: 0px;
-    padding: 0px;
+  min-width: 70px;
+  margin: 0px;
+  padding: 0px;
 }
 
-#team1score,
-#team2score {
+#team1score, #team2score {
   font-size: 22px;
 }
 
 .btn {
-    width: 100%;
-    max-width: 200px;
-    margin: 5px 0px 5px 0px;
+  width: 100%;
+  max-width: 200px;
+  margin: 5px 0px 5px 0px;
 }
 
-#halftime,
-#undo {
+#halftime, #undo {
   width: 98px;
 }
 
@@ -62,29 +57,40 @@ body {
   margin-right: 4px;
 }
 
-#switch,
-#save,
-#clear {
-    width: 100px;
+#switch, #save, #clear {
+  width: 100px;
 }
 
-#rawData div,
-#computedData div {
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
+#rawData div, #computedData div {
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
 }
 
 .notop {
-    border-top-color: black !important;
+  border-top-color: black !important;
 }
 
 th {
-    text-align: center;
+  text-align: center;
 }
 
 #data td {
   word-break: break-all;
+}
+
+.tooltip>.tooltip-inner {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  padding: 5px;
+  font-size: 14px;
+  margin: 0px;
+}
+
+.tooltip.in {
+  opacity: 1 !important;
+  filter:alpha(opacity=100);
 }
 
 .hold {
